debug=true

[package]
name = "MarketData"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio-tungstenite = {version = "0.23.1", features = ["native-tls"]}
tungstenite = "0.23.0"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.30"
clap = { version = "4.5.16", features = ["derive"] }
http = "1.1.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
reqwest-retry = "0.6.1"
rand = "0.8.5"
log = "0.4.22"
env_logger = "0.11.5"
derive-new = "0.7.0"